carrot cake recipe!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title></title>
+    <title>Em's Best</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +13,26 @@
   </head>
 
   <body>
+    <center>
+      <h1> Em's Best Carrot Cake </h1>
+      <h2> by Emily Im </h2>
+      <img src="/images/carrot cake.jpg" alt="carrot cake">
+    </center>
+      <h3>Staying at home for this long enlightened my baking brain to start again. I wanted to make a classic carrot cake since most coffee shops and bakeries are closed around me. This is the recipe I used for this delicious coffee cake.
+        <ul>
+          <li> 1 cup granulated sugar
+          <li> 3/4 cup vegetable oil
+          <li> 2 eggs
+          <li> 1 cup flour
+          <li> 1 tsp baking soda
+          <li> 1/2 tsp salt
+          <li> 1 tsp cinnamon
+          <li> 1 1/2 cup chopped carrots
+          <li> 2 oz of walnuts
+        </ul>
+      Preheat the oven at 400 degrees Fahrenheit. Mix all dry ingredients together. Mix all wet ingredients. Combine together. Fold in chopped carrots and walnuts. Put in pan and oven for 50 minutes. Cool & enjoy!
+
+    </center>
 	</body>
 
 </html>
