Edit #1 images not shown

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <center>
       <h1> Em's Best Carrot Cake </h1>
       <h2> by Emily Im </h2>
-      <img src="/images/carrot cake.jpg" alt="carrot cake">
+      <img src="images/carrot cake.jpg" alt="carrot cake">
     </center>
       <h3>Staying at home for this long enlightened my baking brain to start again. I wanted to make a classic carrot cake since most coffee shops and bakeries are closed around me. This is the recipe I used for this delicious coffee cake.
         <ul>
